--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,8 +1,7 @@
-@import 'fonts';
-@import 'variables';
-@import 'libs/normalize';
+@import './variables';
+@import './libs/normalize';
 
-@import 'components/all';
+@import './components/all';
 
 body {
   background-color: $background;
@@ -37,20 +36,8 @@ body {
   &__items {
     display: grid;
     grid-template-rows: 1fr;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
     grid-gap: 3vw;
-
-    @media (max-width: 1380px) {
-      grid-template-columns: 1fr 1fr 1fr;
-    }
-
-    @media (max-width: 1090px) {
-      grid-template-columns: 1fr 1fr;
-    }
-
-    @media (max-width: 768px) {
-      grid-template-columns: 1fr;
-    }
   }
 
   &__top {
@@ -86,6 +73,9 @@ body {
 }
 
 .cart {
+  .content__items {
+    display: block;
+  }
   &__top {
     display: flex;
     justify-content: space-between;
